updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Business Systems Analyst.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and Raise in the great city of Houston</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Currently I enjoy learning languages of all kinds. Rather that be Spanish or Html</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream goal I should say is to create an effiecient way through self built applications to help students and adults want to learn a language in the comfort of my home.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Houston</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to create platforms to help people with businesses. Being a Web developer would give me the oppurtunity to help other by providing them the tools they need to help them becme more marketable by help presenting them in a professional way. </p>
     </section>
 
     <footer id="footer">
