updating spelling error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Currently I enjoy learning languages of all kinds. Rather that be Spanish or Html</p>
       <h1>What's your dream job?</h1>
-      <p>My dream goal I should say is to create an effiecient way through self built applications to help students and adults want to learn a language in the comfort of my home.</p>
+      <p>My dream goal I should say is to create an effiecient way through self built applications to help students and adults want to learn a language in the comfort of their home.</p>
       <h1>Where do you live?</h1>
       <p>I live in Houston</p>
       <h1>Why do you want to be a web developer?</h1>
